--- a/viewer.css
+++ b/viewer.css
@@ -1,9 +1,15 @@
+#modelSelector {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 100;
+}
+
 #homeLink {
     position: absolute;
     top: 10px;
-    width: 100%;
-    text-align: left;
+    left: 10px;
     z-index: 100;
-    display:block;
     color: white;
+    text-decoration: none;
 }
